<resources>
    <string name="app_name">Amethyst</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scouting">Scouting</string>
    <string name="menu_rankings">Rankings</string>
    <string name="menu_events">Events</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_create">Create</string>

    <string-array name="teams">
        <item>6</item>
        <item>1057</item>
        <item>213</item>
        <item>8</item>
        <item>5</item>
        <item>12</item>
        <item>86</item>
        <item>18057</item>
        <item>2133</item>
        <item>89</item>
        <item>54</item>
        <item>142</item>
        <item>56</item>
        <item>13057</item>
        <item>2163</item>
        <item>88</item>
        <item>55</item>
        <item>132</item>
    </string-array>


    <!-- pit scout string resources-->
    <string name="title_activity_auto_match_fragment">AutoMatchFragmentActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="autoYes">yes</string>
    <string name="autoNo">no</string>
    <string name="robotAutoTaxiing">taxiing</string>
    <string name="robotAutoHumanPlayer">human player</string>
    <string name="robotAutoUpperHub">upper hub</string>
    <string name="robotAutoLowerHub">lower hub</string>
    <string name="cargoYes">yes</string>
    <string name="cargoNo">no</string>
    <string name="autoQuestionsSection">Auto Questions</string>
    <string name="haveAutoQuestion">Do you have an auto?</string>
    <string name="robotAutoFunctionQuestion">What can your robot do during auto?</string>
    <string name="intakeCargoGroundQuestion">Can you intake cargo off of the ground?</string>
    <string name="humanPlayerAccuracyQuestion">If you have a human player, how accurate are they on a scale of 1-10? (10 being the best)</string>
    <string name="upperHubAmountCycleQuestion">How many balls can your robot shoot in the upper hub per cycle?</string>
    <string name="upperHubAmountCycleEditText">type here</string>
    <string name="upperHubAmountMatchQuestion">How many balls can your robot shoot in the upper hub per match total (Auto and Tele)?</string>
    <string name="upperHubAmountMatchEditText">type here</string>
    <string name="lowerHubAmountCycleQuestion">How many balls can your robot shoot in the lower hub per cycle?</string>
    <string name="lowerHubAmountCycleEditText">type here</string>
    <string name="lowerHubAmountMatchQuestion">How many balls can your robot shoot in the lower hub per match total (Auto and Tele)?</string>
    <string name="lowerHubAmountMatchEditText">type here</string>
    <string name="TeleopQuestionsSection">Tele-op Questions</string>
    <string name="ScoreEitherHubsQuestion">Which hub ports can you score in?</string>
    <string name="UpperHubScore">upper</string>
    <string name="LowerHubScore">lower</string>
    <string name="NeitherHubScore">neither</string>
    <string name="BothHubScore">both</string>
    <string name="BallHoldAmountQuestion">How many balls can you hold at once?</string>
    <string name="BallHoldAmountEditText">type here</string>
    <string name="FieldWhereShootQuestion">Where from the field can you shoot? can you shoot from anywhere or do you have to be in a certain spot?</string>
    <string name="FieldWhereShootEditText">type here</string>
    <string name="defenseQuestion">Can your robot play defense?</string>
    <string name="yesDefense">yes</string>
    <string name="noDefense">no</string>
    <string name="rateDefenseQuestion">Rate defense on a scale of 1 - 10 (10 being the best)</string>
    <string name="ratingDefense">rating 0</string>
    <string name="endGameQuestionsSection">End game questions</string>
    <string name="robotClimbQuestion">Can your robot climb?</string>
    <string name="yesClimb">yes</string>
    <string name="noClimb">no</string>
    <string name="WhereStartingPointQuestion">What bar does your robot start climbing from?</string>
    <string name="lowBarStarting">low bar</string>
    <string name="middleBarStarting">middle bar</string>
    <string name="HighestBarQuestion">What is the highest bar your robot can reach?</string>
    <string name="lowBarHighest">low bar</string>
    <string name="middleBarHighest">middle bar</string>
    <string name="highBarHighest">high bar</string>
    <string name="transversalBarHighest">transversal bar</string>
    <string name="consistentBarQuestion">What is the most consistent bar your robot can reach?</string>
    <string name="lowBarConsistent">low bar</string>
    <string name="middleBarConsistent">middle bar</string>
    <string name="highBarConsistent">high bar</string>
    <string name="transversalBarConsistent">transversal bar</string>
    <string name="useLaunchpadQuestion">Do consistently you use the launchpad?</string>
    <string name="yesLaunchpad">yes</string>
    <string name="noLaunchpad">no</string>
    <string name="robotQuestionsSection">Robot Questions</string>
    <string name="openClosedChassisQuestion">Do you have an open or closed chassis?</string>
    <string name="openChassis">open</string>
    <string name="closedChassis">closed</string>
    <string name="openClosedBumperQuestion">Do you have an open or closed bumper?</string>
    <string name="openBumper">open</string>
    <string name="closedBumper">closed</string>
    <string name="driveTrainQuestion">Drive train</string>
    <string name="driveTrainEditText">type here</string>
    <string name="intakeQuestion">Intake</string>
    <string name="intakeEditText">type here</string>
    <string name="mechanismQuestion">Mechanism</string>
    <string name="mechanismEditText">type here</string>
    <string name="programmingLanguageRobotQuestion">Programming language (robot)</string>
    <string name="programmingLanguageRobotEditText">type here</string>
    <string name="ProgrammingLanguageAppQuestion">Programming language (app)</string>
    <string name="programmingLanguageAppEditText">type here</string>
    <string name="climbingMechanismQuestion">Climbing mechanism</string>
    <string name="climbingMechanismEditText">type here</string>
    <string name="accuracyRating">accuracy 0</string>
    <string name="shiftingGearboxQuestion">Does your robot use a shifting gearbox?</string>
    <string name="yesShiftingGearbox">yes</string>
    <string name="noShiftingGearbox">no</string>
    <string name="shiftingGearboxSettingsQuestions">What settings does your shifting gearbox have?</string>
    <string name="shiftingGearboxEditText">type here</string>

        <!-- pit scouting home page extract resources -->
    <string name="pitScoutingHeaderHome">Pit Scouting</string>
    <string name="startPitScoutButton">start pit scouting</string>
    <string name="chooseTeamTextView">Choose your team to scout</string>
    <string name="StarorLinearTopologyQuestion">Do you use star topology or linear topology (CAN system)?</string>
    <string name="linearTopology">linear topology</string>
    <string name="starTopology">star topology</string>
    <string name="neitherTopology">neither</string>
    <string name="bothTopology">both</string>
    <string name="saveDataButton">submit</string>
    <string name="pitScoutingWarning">Click the button below to start pit scouting. When you are finished, click submit. Please do not leave page until you are finished with pit scouting!</string>


</resources>