<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scouting"
            android:icon="@drawable/icon_scouting"
            android:title="@string/menu_scouting" />
        <item
            android:id="@+id/nav_rankings"
            android:icon="@drawable/icon_rankings"
            android:title="@string/menu_rankings" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/icon_events"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_matches"
            android:icon="@drawable/icon_matches"
            android:title="@string/menu_matches" />
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/icon_create"
            android:title="@string/menu_create" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>