<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.PitScoutingHomeFragment">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/scouting_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:menu="@menu/scouting_menu" >

        </com.google.android.material.bottomnavigation.BottomNavigationView>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="648dp"
            android:text="@string/pitScoutingHeaderHome"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/scouting_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_marginTop="225dp"
            android:text="@string/chooseTeamTextView"
            android:textSize="30sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/spinner2"
            app:layout_constraintEnd_toEndOf="@+id/spinner2"
            app:layout_constraintStart_toStartOf="@+id/spinner2"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/startPit"
            app:layout_constraintEnd_toEndOf="@+id/startPit"
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintStart_toStartOf="@+id/startPit"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/pitScoutingHomeWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="@string/pitScoutingWarning"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/startPit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

        <Button
            android:id="@+id/startPit"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginBottom="4dp"
            android:text="@string/startPitScoutButton"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/scouting_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>